# controlador-bomba-de-insulina-esp32

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
FFIP/: FFIP.ino
src/: main.cpp
